--- a/task/61aa8f3a46b00155fb2e0aeb0084bf6f.ipynb
+++ b/task/61aa8f3a46b00155fb2e0aeb0084bf6f.ipynb
@@ -19,21 +19,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Rectangle:\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    def __init__(self, width=3, height=5):\n",
+    "        self.__width = width\n",
+    "        self.__height = height\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return 'Rectangle with width {width} cm and height {height} cm'.format(width = self.__width, height = self.__height)\n",
+    "    \n",
+    "    def get_perimeter(self):\n",
+    "        p = self.__width * 2 + self.__height * 2\n",
+    "        return 'The perimeter of the rectangle is {p} cm'.format(p=p)\n",
+    "    \n",
+    "    def get_area(self):\n",
+    "        area = self.__width * self.__height\n",
+    "        return 'The area of the rectangle is {area} cm2'.format(area=area)\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def get_info():\n",
+    "        return 'This class calculates perimeter and area of the rectangles'\n",
     "    # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "This class calculates perimeter and area of the rectangles\n"
+     ]
+    }
+   ],
    "source": [
     "print(Rectangle.get_info())"
    ]
@@ -50,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Rectangle with width 3 cm and height 5 cm\n"
+     ]
+    }
+   ],
    "source": [
     "print(r1)"
    ]
@@ -78,9 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The perimeter of the rectangle is 16 cm\n"
+     ]
+    }
+   ],
    "source": [
     "print(r1.get_perimeter())"
    ]
@@ -97,9 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The area of the rectangle is 15 cm2\n"
+     ]
+    }
+   ],
    "source": [
     "print(r1.get_area())"
    ]
@@ -116,9 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'Rectangle' object has no attribute 'width'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-216fdab41e41>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Rectangle' object has no attribute 'width'"
+     ]
+    }
+   ],
    "source": [
     "print(r1.width)"
    ]
@@ -141,9 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'Rectangle' object has no attribute '_height'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-a8bf973e57c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_height\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Rectangle' object has no attribute '_height'"
+     ]
+    }
+   ],
    "source": [
     "print(r1._height)"
    ]
@@ -166,9 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'Rectangle' object has no attribute '__width'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-4eff55138225>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__width\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Rectangle' object has no attribute '__width'"
+     ]
+    }
+   ],
    "source": [
     "print(r1.__width)"
    ]
@@ -206,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
