--- a/task_oop6.ipynb
+++ b/task_oop6.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ООП: Наследование [Домашнее задание]\n",
+    "### ООП: Ассоциация [Домашнее задание]\n",
     "\n",
     "---"
    ]
@@ -15,36 +15,36 @@
    "source": [
     "### Шаг 1:\n",
     "\n",
-    "Пожалуйста, спроектируйте родительский класс **Rectange** (Прямоугольник) таким образом, чтобы все следующие блоки кодов приводили к ожидаемым результатам."
+    "Пожалуйста, спроектируйте класс **Rectange** (Прямоугольник) таким образом, чтобы все следующие блоки кодов приводили к ожидаемым результатам."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Rectangle:\n",
     "    def __init__(self, width=None, height=None):\n",
     "        # Начало вашего кода\n",
-    "        self.__width = width\n",
-    "        self.__height = height\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
     "        # Конец вашего кода\n",
     "    \n",
     "    def __str__(self):\n",
     "        # Начало вашего кода\n",
-    "        return 'Rectangle with width {width} cm and height {height} cm'.format(width = self.__width, height = self.__height)\n",
+    "        return 'Rectangle with width {width} cm and height {height} cm'.format(width = self.width, height = self.height)\n",
     "        # Конец вашего кода\n",
     "    \n",
     "    def get_area(self):\n",
     "        # Начало вашего кода\n",
-    "        area = self.__width * self.__height\n",
+    "        area = self.width * self.height\n",
     "        return area\n",
     "        # Конец вашего кода\n",
     "        \n",
     "    def get_perimeter(self):\n",
     "        # Начало вашего кода\n",
-    "        p = self.__width * 2 + self.__height * 2\n",
+    "        p = self.width * 2 + self.height * 2\n",
     "        return p\n",
     "        # Конец вашего кода\n",
     "    \n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -206,31 +206,49 @@
     "---\n",
     "### Шаг 2:\n",
     "\n",
-    "Пожалуйста, спроектируйте детский класс **Square** (Квадрат) таким образом, чтобы все следующие блоки кодов приводили к ожидаемым результатам."
+    "Пожалуйста, спроектируйте класс **Figures** (Фигуры) таким образом, чтобы все следующие блоки кодов приводили к ожидаемым результатам."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Square(Rectangle):\n",
-    "    def __init__(self, side = None):\n",
-    "        # Начало вашего кода        \n",
-    "        self.side = side\n",
-    "        super().__init__(width=self.side, height=self.side)\n",
-    "        # Конец вашего кода\n",
+    "class Figures:\n",
+    "    def __init__(self):\n",
+    "        self.figures = []\n",
+    "        self.num_figures = 0\n",
     "        \n",
     "    def __str__(self):\n",
     "        # Начало вашего кода\n",
-    "        return 'Square with side {side} cm'.format(side = self.side)\n",
+    "\n",
     "        # Конец вашего кода\n",
-    "        \n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        # Начало вашего кода\n",
+    "\n",
+    "        # Конец вашего кода\n",
+    "    \n",
+    "    def add_rectangle(self, width=None, height=None):\n",
+    "        # Начало вашего кода\n",
+    "        self.figures.append(Rectangle(width=width, height=height))\n",
+    "        # Конец вашего кода\n",
+    "    \n",
+    "    def get_perimeters(self):\n",
+    "        # Начало вашего кода\n",
+    "\n",
+    "        # Конец вашего кода\n",
+    "\n",
+    "    def get_areas(self):\n",
+    "        # Начало вашего кода\n",
+    "\n",
+    "        # Конец вашего кода\n",
+    "    \n",
     "    @staticmethod\n",
     "    def get_info():\n",
     "        # Начало вашего кода\n",
-    "        return 'This class calculates perimeter and area of the square'\n",
+    "\n",
     "        # Конец вашего кода"
    ]
   },
@@ -240,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dir(Square))"
+    "print(dir(Figures))"
    ]
   },
   {
@@ -249,61 +267,17 @@
    "source": [
     "### Ожидаемый результат:\n",
     "```\n",
-    "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'get_area', 'get_info', 'get_perimeter']\n",
+    "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'add_rectangle', 'get_info']\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "This class calculates perimeter and area of the square\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Square.get_info())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ожидаемый результат:\n",
-    "```\n",
-    "This class calculates perimeter and area of the square\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1 = Square(side = 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Square with side 10 cm\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(s1)"
+    "print(Figures.get_info())"
    ]
   },
   {
@@ -312,188 +286,26 @@
    "source": [
     "### Ожидаемый результат:\n",
     "```\n",
-    "Square with side 10 cm\n",
+    "This class creates the container containing the instances of class Rectangle\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The perimeter is 40 cm\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"The perimeter is {} cm\".format(s1.get_perimeter()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ожидаемый результат:\n",
-    "```\n",
-    "The perimeter is 40 cm\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The area is 100 cm2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"The area is {} cm2\".format(s1.get_area()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ожидаемый результат:\n",
-    "```\n",
-    "The area is 100 cm2\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "### Шаг 3:\n",
-    "\n",
-    "Пожалуйста, спроектируйте детский класс  **Cube** (Куб) таким образом, чтобы все следующие блоки кодов приводили к ожидаемым результатам. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Cube(Square):\n",
-    "    def __init__(self, side=None):\n",
-    "        # Начало вашего кода\n",
-    "        self.side = side\n",
-    "        # Конец вашего кода\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        # Начало вашего кода\n",
-    "        return 'Cube with side {side} cm'.format(side = self.side)\n",
-    "        # Конец вашего кода\n",
-    "    \n",
-    "    def get_surface_area(self):\n",
-    "        # Начало вашего кода\n",
-    "        sur_area = self.side**2 * 6\n",
-    "        return sur_area\n",
-    "        # Конец вашего кода\n",
-    "    \n",
-    "    def get_volume(self):\n",
-    "        # Начало вашего кода\n",
-    "        v = self.side**3\n",
-    "        return v\n",
-    "        # Конец вашего кода\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def get_info():\n",
-    "        # Начало вашего кода\n",
-    "        return 'This class calculates surface area and volume of the cube'\n",
-    "        # Конец вашего кода"
+    "f = Figures()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'get_area', 'get_info', 'get_perimeter', 'get_surface_area', 'get_volume']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dir(Cube))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ожидаемый результат:\n",
-    "```\n",
-    "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'get_area', 'get_info', 'get_perimeter', 'get_surface_area', 'get_volume']\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "This class calculates surface area and volume of the cube\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Cube.get_info())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ожидаемый результат:\n",
-    "```\n",
-    "This class calculates surface area and volume of the cube\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c1 = Cube(side = 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Cube with side 10 cm\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(c1)"
+    "print(f)"
    ]
   },
   {
@@ -502,25 +314,28 @@
    "source": [
     "### Ожидаемый результат:\n",
     "```\n",
-    "Cube with side 10 cm\n",
+    "Container containing figures\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The surface area is 600 cm2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"The surface area is {} cm2\".format(c1.get_surface_area()))"
+    "f.add_rectangle(width=15,height=15)\n",
+    "f.add_rectangle(width=10,height=10)\n",
+    "f.add_rectangle(width=5,height=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.get_perimeters()"
    ]
   },
   {
@@ -529,25 +344,17 @@
    "source": [
     "### Ожидаемый результат:\n",
     "```\n",
-    "The surface area is 600 cm2\n",
+    "60 40 20\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The volume is 1000 cm2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"The volume is {} cm2\".format(c1.get_volume()))"
+    "f.get_areas()"
    ]
   },
   {
@@ -556,7 +363,64 @@
    "source": [
     "### Ожидаемый результат:\n",
     "```\n",
-    "The volume is 1000 cm2\n",
+    "225 100 25\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"There are {} rectangles\".format(len(f)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ожидаемый результат:\n",
+    "```\n",
+    "There are 3 rectangles\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.add_rectangle(width=15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ожидаемый результат:\n",
+    "```\n",
+    "You didn't provide width or height properly\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"There are {} rectangles\".format(len(f)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ожидаемый результат:\n",
+    "```\n",
+    "There are 3 rectangles\n",
     "```"
    ]
   }
