--- a/task_oop6.ipynb
+++ b/task_oop6.ipynb
@@ -20,15 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Rectangle:\n",
     "    def __init__(self, width=None, height=None):\n",
     "        # Начало вашего кода\n",
-    "        self.width = width\n",
-    "        self.height = height\n",
+    "        try:\n",
+    "            self.width = width\n",
+    "            self.height = height\n",
+    "        except:\n",
+    "            return 'You didn\\'t provide width or height properly'\n",
+    "\n",
     "        # Конец вашего кода\n",
     "    \n",
     "    def __str__(self):\n",
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "__init__() missing 2 required positional arguments: 'width' and 'height'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-95-6b49ec465754>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRectangle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 2 required positional arguments: 'width' and 'height'"
+     ]
+    }
+   ],
+   "source": [
+    "p = Rectangle()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,41 +247,54 @@
     "        \n",
     "    def __str__(self):\n",
     "        # Начало вашего кода\n",
-    "\n",
+    "        return 'Container containing figures'\n",
     "        # Конец вашего кода\n",
     "    \n",
     "    def __len__(self):\n",
     "        # Начало вашего кода\n",
-    "\n",
+    "        return len(self.figures)\n",
     "        # Конец вашего кода\n",
     "    \n",
     "    def add_rectangle(self, width=None, height=None):\n",
     "        # Начало вашего кода\n",
-    "        self.figures.append(Rectangle(width=width, height=height))\n",
+    "        if width==None or height==None:\n",
+    "            return 'You didn\\'t provide width or height properly'\n",
+    "        else:\n",
+    "            self.figures.append(Rectangle(width=width, height=height))\n",
     "        # Конец вашего кода\n",
     "    \n",
     "    def get_perimeters(self):\n",
     "        # Начало вашего кода\n",
-    "\n",
+    "        for i in self.figures:\n",
+    "            print(i.get_perimeter(), end=' ')\n",
     "        # Конец вашего кода\n",
     "\n",
     "    def get_areas(self):\n",
     "        # Начало вашего кода\n",
-    "\n",
+    "        for j in self.figures:\n",
+    "            print(j.get_area(), end=' ')\n",
     "        # Конец вашего кода\n",
     "    \n",
     "    @staticmethod\n",
     "    def get_info():\n",
     "        # Начало вашего кода\n",
-    "\n",
+    "        return 'This class creates the container containing the instances of class Rectangle'\n",
     "        # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'add_rectangle', 'get_areas', 'get_info', 'get_perimeters']\n"
+     ]
+    }
+   ],
    "source": [
     "print(dir(Figures))"
    ]
@@ -273,9 +311,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "This class creates the container containing the instances of class Rectangle\n"
+     ]
+    }
+   ],
    "source": [
     "print(Figures.get_info())"
    ]
@@ -292,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,9 +347,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Container containing figures\n"
+     ]
+    }
+   ],
    "source": [
     "print(f)"
    ]
@@ -320,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,9 +385,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "60 40 20 "
+     ]
+    }
+   ],
    "source": [
     "f.get_perimeters()"
    ]
@@ -350,9 +412,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "225 100 25 "
+     ]
+    }
+   ],
    "source": [
     "f.get_areas()"
    ]
@@ -369,9 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "There are 3 rectangles\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"There are {} rectangles\".format(len(f)))"
    ]
@@ -388,9 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "\"You didn't provide width or height properly\""
+      ]
+     },
+     "metadata": {},
+     "execution_count": 106
+    }
+   ],
    "source": [
     "f.add_rectangle(width=15)"
    ]
@@ -407,9 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "There are 3 rectangles\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"There are {} rectangles\".format(len(f)))"
    ]
